@@ -24,9 +24,9 @@ requires:
   English: 0
   File::Slurp: 0
   List::MoreUtils: 0
-  Nagios::Plugin: 0
-  Nagios::Plugin::Getopt: 0
-  Nagios::Plugin::Threshold: 0
+  Monitoring::Plugin: 0
+  Monitoring::Plugin::Getopt: 0
+  Monitoring::Plugin::Threshold: 0
   Number::Format: 0
   POSIX: 0
   Readonly: 0
